[project]
name = "PyPLext"
version = "0.1.0"
description = "Julia statevector extension module for PennyLane"
authors = [
    "Lee J. O'Riordan <lee@xanadu.ai>"
]
readme = "README.md"
python = "^3.7"

classifiers = [
    "Programming Language :: Python :: 3"
    "Programming Language :: Julia"
]

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools",
    "cmake>=3.20",
    "pybind11",
    "wheel",
    "ninja; sys_platform != 'win32' and platform_machine != 'arm64'",
]
build-backend = "setuptools.build_meta"